--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,9 +109,12 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_search">search</string>
     <string name="action_settings">设置</string>
     <string name="action_search">搜索</string>
 
     <string name="toast_message">Toast message</string>
     <string name="action_share">分享</string>
+    <string name="search_history">历史搜索</string>
+    <string name="search_hot">热门搜索</string>
 </resources>
