--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,4 +117,5 @@
     <string name="action_share">分享</string>
     <string name="search_history">历史搜索</string>
     <string name="search_hot">热门搜索</string>
+    <string name="input">请输入相关字段</string>
 </resources>
