--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,5 @@
     <string name="search_history">历史搜索</string>
     <string name="search_hot">热门搜索</string>
     <string name="input">请输入相关字段</string>
+    <string name="retry">重试</string>
 </resources>
