--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,4 +119,5 @@
     <string name="search_hot">热门搜索</string>
     <string name="input">请输入相关字段</string>
     <string name="retry">重试</string>
+    <string name="click_anti_shake">点击事件-防抖机制</string>
 </resources>
